fixed alignment in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,12 @@
 .symbols {
     width: 200px;
     height: 200px;
-    margin: 0px 30px 0px 30px;
+    margin: 20px 30px;
+}
+
+#title,
+#SymbolsDiv {
+    margin: 0 auto;
 }
 
 body {
@@ -15,34 +20,40 @@ body {
 
 h1 {
     font-size: 40px;
+    color: grey;
+    text-align: center;
 }
+
+.column {
+    float: left;
+    width: 50%;
+  }
 
 #bgm {
     height: 1px;
     width: 1px;
 }
 
-#RandomNumber {
-    position: absolute;
-    top: 100px;
-    left: 10px;
+
+#wins {
+    color: rgb(0, 179, 0);
 }
 
-#TotalNumber {
-    position: absolute;
-    top: 100px;
-    right: 10px;
+#losses {
+    color: red;
 }
 
-#SymbolsDiv {
-    position: absolute;
-   margin-top: 70px;
-   margin-left: 170px;
+#randomNumberBox,
+#total {
+    color: yellow;
 }
 
-#Results {
-    position: absolute;
-    left: 50%;
-    top: 90%;
-    transform: translate(-50%, -50%);
+#container {
+    margin: 0 auto;
 }
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
